# patchfield

./: README.md  build.gradle  import-summary.txt  settings.gradle
app/: CMakeLists.txt  README.md  build.gradle
app/src/androidTest/java/com/cl/slack/patchfieldslack/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/aidl/com/cl/slack/patchfieldslack/: IPatchfieldClient.aidl  IPatchfieldService.aidl
app/src/main/cpp/internal/: audio_module.c  audio_module_internal.c  audio_module_internal.h  audio_module_java.c  audio_module_java.h  patchfield.c  patchfield.h  shared_memory_utils.c  shared_memory_utils.h  simple_barrier.c
app/src/main/cpp/lowpass/: lowpass.c  lowpass.h
app/src/main/cpp/opensl_stream/: opensl_stream.c
app/src/main/cpp/pcm/: pcmsource.c  pcmsource.h
app/src/main/cpp/utils/: buffer_size_adapter.h
app/src/main/java/com/cl/slack/patchfieldslack/: MainActivity.java
app/src/main/java/com/cl/slack/patchfieldslack/control/: ControlActivity.java  PatchView.java
app/src/main/java/com/cl/slack/patchfieldslack/internal/: OpenSlParams.java  SharedMemoryUtils.java
app/src/main/java/com/cl/slack/patchfieldslack/lowpass/: LowpassActivity.java  LowpassModule.java
app/src/main/java/com/cl/slack/patchfieldslack/patchfield/: AudioModule.java  Patchfield.java  PatchfieldActivity.java  PatchfieldException.java
app/src/main/java/com/cl/slack/patchfieldslack/patchfieldPd/: PdSampleActivity.java
app/src/main/java/com/cl/slack/patchfieldslack/patchfieldPd/core/: NativeLoader.java  PdBase.java  PdListener.java  PdMidiListener.java  PdMidiReceiver.java  PdReceiver.java
app/src/main/java/com/cl/slack/patchfieldslack/patchfieldPd/core/utils/: IoUtils.java  PdDispatcher.java
app/src/main/java/com/cl/slack/patchfieldslack/patchfieldPd/pd/: PdModule.java
app/src/main/java/com/cl/slack/patchfieldslack/pcm/: PcmActivity.java  PcmSource.java
app/src/main/java/com/cl/slack/patchfieldslack/service/: PatchfieldService.java
app/src/main/res/layout/: activity_control.xml  activity_lowpass.xml  activity_main.xml  activity_pcm.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/cl/slack/patchfieldslack/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
opensl_es/: CMakeLists.txt  README.md  build.gradle
opensl_es/src/androidTest/java/com/cl/slack/opensl_es/: ExampleInstrumentedTest.java
opensl_es/src/main/: AndroidManifest.xml
opensl_es/src/main/cpp/: native_audio.c
opensl_es/src/main/cpp/opensl_io/: opensl_io.c
opensl_es/src/main/java/com/cl/slack/opensl_es/: MainActivity.java
opensl_es/src/main/res/layout/: activity_main.xml
opensl_es/src/main/res/values/: strings.xml
opensl_es/src/test/java/com/cl/slack/opensl_es/: ExampleUnitTest.java
opensl_stream_sample/: CMakeLists.txt  READMe.md  build.gradle
opensl_stream_sample/src/androidTest/java/com/cl/slack/opensl_stream_sample/: ExampleInstrumentedTest.java
opensl_stream_sample/src/main/: AndroidManifest.xml
opensl_stream_sample/src/main/cpp/: lowpass.c  lowpass.h
opensl_stream_sample/src/main/java/com/cl/slack/opensl_stream_sample/: Lowpass.java  MainActivity.java  OpenSlParams.java
opensl_stream_sample/src/main/res/layout/: activity_main.xml
opensl_stream_sample/src/main/res/values/: strings.xml
opensl_stream_sample/src/test/java/com/cl/slack/opensl_stream_sample/: ExampleUnitTest.java
patchfieldPd/: build.gradle
pdSample/: build.gradle
(+10 files in other folders)
